--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -26,8 +26,7 @@ jobs:
         run: |
           # This assumes your book is in the root of your repository.
           # Just add a `cd` here if you need to change to another directory.
-          cd book
-          mdbook build
+          mdbook build book
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
